--- a/written/eLifeRevision/Response.tex
+++ b/written/eLifeRevision/Response.tex
@@ -58,7 +58,7 @@ List of key manuscript improvements:
 \item We added an entirely new results section to compare EPI to alternative parameter inference techniques (SMC-ABC and SNPE) as parameter count increases, which demonstrates the advantages of EPI in high dimensional parameter spaces. See response to main concern \#2.
 \item EPI is used to understand how noise across neuron type populations governs excitatory variability in a model of primary visual cortex.  
 Here, EPI yields visually striking, novel insight where the conventional analytic approach became infeasible with increasing neuron types.  See response to main concern \#4.
-\item EPI is used to discover multiple parametric regimes of ``rapid task switching" in a model of superior colliculus.  
+\item EPI is used to discover multiple parametric regimes of rapid task switching in a model of superior colliculus.  
 These regimes are efficiently identified and mechanistically characterized using the probabilistic modeling tools afforded by EPI, and we relate the inferred connectivities to results from optogenetic silencing experiments in rats. See response to main concern \#4.
 \end{itemize}
 
